--- a/keyboard/src/styles.css
+++ b/keyboard/src/styles.css
@@ -56,6 +56,14 @@
     align-items: center;
     justify-content: center;
 }
+.key_btn:hover {
+    cursor: pointer;
+    background-color: #6495ed30;
+    transition: 0.1s;
+}
+.key_btn .active {
+    background-color: aqua;
+}
 .key_btn_size_standart {
     width: 6%;
 }
@@ -63,11 +71,7 @@
 .key_btn_size_double {
     width: 12.7%;
 }
-.key_btn:hover {
-    cursor: pointer;
-    background-color: #6495ed30;
-    transition: 0.1s;
-}
+
 .key_btn_size_space {
     width: 52.8%;
 }
